# sharepoint_uploader

./: README.md  pyproject.toml  requirements.txt
src/sp_uploader/: __init__.py  uploader.py
